syntax = "proto3";
package worker_2_controller_service;
option go_package = "script/rpc_server/worker;worker_2_controller_service";

message RegistRequest {
  string worker_id = 1;
  string password = 2;
  WorkerInfo info = 3;
}

message WorkerInfo {
  // Host
  string hostname = 1;
  string os = 2;
  string platform = 3;
  string platform_family = 4;
  string platform_version = 5;
  string kernel_version = 6;
  string arch = 7;

  // CPU
  int32 cpu_logical_cores = 8;
  int32 cpu_physical_cores = 9;
  string cpu_model_name = 10;

  // Memory
  uint64 memory_total = 11;

  // Disk
  uint64 disk_total = 12;
}

message RegistResponse {
  bool success = 1;
  string secret = 2;
}

service Worker2Controller {
  rpc RegistWorker(RegistRequest) returns (RegistResponse);
  rpc Hearting(HeartingRequest) returns (HeartingResponse);
  rpc ReportTaskStatus(TaskReportRequest) returns (TaskReportResponse);
}

message Task{
  int32 task_type = 1;
  int32 task_level = 2;
  int32 task_priority = 3;
  bytes task_data = 4;
  bool success = 5;
}

message TaskReportRequest {
  string task_port_id = 1;
  repeated Task details = 2;
}

message TaskDistribution {
  string worker_id = 1;
  string task_id = 2;
}

message TaskReportResponse {
  bool received = 1;
  repeated TaskDistribution tasks = 2;
}

message Status {
  // CPU
  int32 cpu_logical_cores = 1;
  bool super_threading_enabled = 2;
  repeated double cpu_usage_percents = 3;
  
  // Memory
  double memory_usage_percent = 4;
  uint64 memory_total = 5;

  // App
  int32 task_count = 6; 
  // Disk
  double disk_usage_percent = 7;
  uint64 disk_total = 8;
  int32 disk_read_bytes = 9;
  int32 disk_write_bytes = 10;
}

message RepeatedStatus {
  repeated Status statuses = 1;
}

message HeartingRequest {
  string ip = 1;
  Status status = 2;
}

message HeartingResponse {
}

